# lana-sim-scenarios

./: .gitignore  Makefile  README.md  pyproject.toml
output/generated_scenarios/: collateral_01_manual_update.rs  collateral_02_custodian_sync.rs  collateral_03_topup.rs  collateral_04_withdrawal.rs  collateral_05_price_drop.rs  collateral_06_price_recovery.rs  customer_01_simple.rs  customer_02_kyc_approved.rs  customer_03_kyc_rejected.rs  customer_04_prospect_conversion.rs  customer_05_business.rs  deposit_01_success.rs  deposit_02_reverted.rs  deposit_03_withdrawal_success.rs  deposit_04_withdrawal_denied.rs  deposit_05_large_withdrawal.rs  edge_01_multi_year.rs  edge_02_concurrent.rs  edge_03_zero_interest.rs  edge_04_max_ltv.rs  edge_05_committee.rs  edge_06_reports.rs  edge_07_price_events.rs  edge_08_bootstrap.rs  loan_01_happy_path.rs  loan_02_proposal_denied.rs  loan_03_disbursal_denied.rs  loan_04_late_payment.rs  loan_05_default.rs  loan_06_margin_call_recovery.rs  loan_07_partial_liquidation.rs  loan_08_early_repayment.rs  loan_09_multiple_disbursals.rs  loan_10_customer_cancels.rs  loan_11_full_liquidation.rs  loan_12_long_term.rs  mod.rs  payment_01_on_time.rs  payment_02_overdue.rs  payment_03_defaulted.rs  (+3 more)
src/lana_sim_scenarios/: __init__.py  cli.py
src/lana_sim_scenarios.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
src/lana_sim_scenarios/generator/: __init__.py  rust_generator.py  scenario_parser.py
src/lana_sim_scenarios/templates/: mod.rs.j2  scenario.rs.j2
